# opencv_v4l2

./: .gitignore  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS  LICENSE  README.md
lib/: CMakeLists.txt  README.md
lib/inc/: v4l2_helper.h
lib/src/: v4l2_helper.c
opencv/: opencv_build_options.cmake  opencv_install_script.bash
results/: test_results.txt
src/: opencv_buildinfo.cpp  opencv_main.cpp  opencv_v4l2.cpp
